--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
+      <!-- FontAwesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
     <div id="map-container">
         <div id="map"></div>
-        <div id="info-box">
-            <p>Kafelerin isimlerine tıklayarak <br> Google Maps'te konumlarını görüntüleyebilirsiniz.</p>
-        </div>
+       <!-- FontAwesome Question Icon inside Info Box -->
+       <div id="info-box">
+        <i class="fa-solid fa-circle-question" id="info-icon" style="font-size:36px; cursor:pointer;"></i>
+    </div>
+    
     </div>
 
 
