--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 <body>
     <div id="map-container">
         <div id="map"></div>
-       <!-- FontAwesome Question Icon inside Info Box -->
-       <div id="info-box">
-        <i class="fa-solid fa-circle-question" id="info-icon" style="font-size:36px; cursor:pointer;"></i>
-    </div>
-    
+        <div id="info-box">
+            <i class="fa-solid fa-circle-question" id="info-icon" style="font-size:36px; cursor:pointer;"></i>
+            <div id="info-modal">
+                Kafelerin isimlerine tıklayarak Google Maps'te konumlarını görüntüleyebilirsiniz.
+            </div>
+        </div>
     </div>
 
 
